--- a/DirectXgame.vcxproj
+++ b/DirectXgame.vcxproj
@@ -101,6 +101,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll"</Command>
     <ClCompile Include="DirectX.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MatrixCalculation.cpp" />
     <ClCompile Include="String.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="WinApp.cpp" />
@@ -108,8 +109,11 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll"</Command>
   <ItemGroup>
     <ClInclude Include="DirectX.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Matrix4x4.h" />
+    <ClInclude Include="MatrixCalculation.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vector3.h" />
     <ClInclude Include="Vector4.h" />
     <ClInclude Include="WinApp.h" />
   </ItemGroup>
