--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=969,178
 Size=550,680
 Collapsed=0
 
@@ -16,5 +16,10 @@ Collapsed=0
 [Window][Triangle]
 Pos=23,102
 Size=119,159
+Collapsed=0
+
+[Window][Color]
+Pos=60,60
+Size=173,100
 Collapsed=0
 
